Adding initial support for additional exchanges (MtGox)

--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,5 @@
 		"storage",
 		"https://coinbase.com/"
 	],
-	"content_security_policy": "default-src 'self' https://coinbase.com https://ajax.googleapis.com https://themes.googleusercontent.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
+	"content_security_policy": "default-src 'self' https://coinbase.com https://data.mtgox.com https://ajax.googleapis.com https://themes.googleusercontent.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
 }
