--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,8 @@
 		"storage",
 		"https://coinbase.com/",
 		"https://data.mtgox.com/",
-        "https://btc-e.com/"
+        "https://btc-e.com/",
+        "https://www.virwox.com/"
 	],
-	"content_security_policy": "default-src 'self' https://coinbase.com https://data.mtgox.com https://btc-e.com https://ajax.googleapis.com https://themes.googleusercontent.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
+	"content_security_policy": "default-src 'self' https://coinbase.com https://data.mtgox.com https://btc-e.com https://www.virwox.com https://ajax.googleapis.com https://themes.googleusercontent.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
 }
