--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
         "https://btc-e.com/",
         "https://www.bitstamp.net/",
         "https://www.virwox.com/",
-        "http://www.eldolarblue.net/"
+        "http://www.eldolarblue.net/",
+        "https://live.bullionvault.com/"
 	],
-	"content_security_policy": "default-src 'self' https://ajax.googleapis.com https://themes.googleusercontent.com; connect-src https://coinbase.com https://data.mtgox.com https://btc-e.com https://www.bitstamp.net https://www.virwox.com http://www.eldolarblue.net; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
+	"content_security_policy": "default-src 'self' https://ajax.googleapis.com https://themes.googleusercontent.com; connect-src https://coinbase.com https://data.mtgox.com https://btc-e.com https://www.bitstamp.net https://www.virwox.com http://www.eldolarblue.net https://live.bullionvault.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
 }
