--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
 	"description": "Up to the Minute Bitcoin Prices",
 	"minimum_chrome_version": "22.0",
 	"background" : {
-		"scripts": ["scripts/background.js"],
+		"scripts": ["scripts/common.js",
+					"scripts/background.js"],
 	    "persistent": false
 	},
 	"browser_action" :
