--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
 	"description": "Up to the Minute Bitcoin Prices",
 	"minimum_chrome_version": "22.0",
 	"background" : {
-		"scripts": ["scripts/common.js",
+		"scripts": ["scripts/jquery-2.0.3.min.js",
+					"scripts/common.js",
 					"scripts/background.js"],
 	    "persistent": false
 	},
@@ -32,8 +33,8 @@
         "https://btc-e.com/",
         "https://www.bitstamp.net/",
         "https://www.virwox.com/",
-        "http://www.eldolarblue.net/",
+        "http://www.ambito.com/",
         "https://live.bullionvault.com/"
 	],
-	"content_security_policy": "default-src 'self' https://ajax.googleapis.com https://themes.googleusercontent.com; connect-src https://coinbase.com https://data.mtgox.com https://btc-e.com https://www.bitstamp.net https://www.virwox.com http://www.eldolarblue.net https://live.bullionvault.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
+	"content_security_policy": "default-src 'self' https://ajax.googleapis.com https://themes.googleusercontent.com; connect-src https://coinbase.com https://data.mtgox.com https://btc-e.com https://www.bitstamp.net https://www.virwox.com http://www.ambito.com https://live.bullionvault.com; style-src 'unsafe-inline' 'self' https://coinbase.com https://fonts.googleapis.com"
 }
